# Ignix-Builder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  credits.md
app_res/web/intro_animation/: intro_anim.css
app_res/web/intro_animation/js/: scripts.js
assets/web/intro_animation/: intro_anim.html
assets/web/intro_animation/js/: anime.min.js
form-builder-project/: nerp-builder-gui-mainform.fbp
help/: builder-supported-source-guidelines.md  clion-setup-tutorial.md  devmode.md  rider-setup-tutorial.md
platform/macosx/: Info.plist  NerpaDevIcon.icns
source/: CMakeLists.txt  CMakeSettings.json  nbApp.cpp  nbApp.h  nbForms.cpp  nbForms.h  propgrid.cpp  propgrid.h
source/common/: Version.cpp
source/common/data/: IterVersion.cpp  IterVersion.h  Version.cpp  Version.h
source/common/interface/: ILinkedObserver.cpp  ILinkedObserver.h  IObservable.cpp  IObservable.h
source/data/: nbDependency.cpp  nbDependency.h  nbEPropertyType.h  nbERecipeKind.h  nbFeature.cpp  nbFeature.h  nbOpenedProjectHandler.cpp  nbOpenedProjectHandler.h  nbProject.cpp  nbProject.h  nbProperty.cpp  nbProperty.h  nbPropertyGroup.cpp  nbPropertyGroup.h  nbRecipe.cpp  nbRecipe.h
source/data/consts/: nbProjectStructConsts.h
source/interface/: nbIObservable.cpp  nbIObservable.h  nbIObserverProjectWorker.cpp  nbIObserverProjectWorker.h
source/logic/: nbOpenedProjectHandler.cpp  nbOpenedProjectHandler.h  nbProjectHandlerIObserver.cpp  nbProjectHandlerIObserver.h  nbProjectWorker.cpp  nbProjectWorker.h
source/logic/factories/: nbProjectEntitiesLoader.cpp  nbProjectEntitiesLoader.h
source/logic/request_data/: nbReqProjectLoadingResult.cpp  nbReqProjectLoadingResult.h  nbReqProjectSavingResult.cpp  nbReqProjectSavingResult.h
source/nb/consts/: nbProjectStructConsts.h
source/nb/data/: nbDependency.cpp  nbDependency.h  nbERecipeKind.h  nbFeature.h  nbProject.cpp  nbProject.h  nbProperty.cpp  nbProperty.h  nbPropertyGroup.cpp  nbPropertyGroup.h  nbRecipe.cpp  nbRecipe.h
source/nb/data/consts/: nbProjectStructConsts.h
source/nb/data/dependencies/: nbDependency.cpp  nbDependency.h  nbEDepGroupKind_ByDepParam.h  nbEDepGroupKind_DepParam.h  nbEDepGroupKind_DepTarget_Type.h  nbEDepGroupKind_SearchCriteriaForDepResolve.h  nbGroupKindRelatedDep.cpp  nbGroupKindRelatedDep.h
source/nb/data/dependencies/in_recipes/: nbDependency_InRecipe.cpp  nbDependency_InRecipe.h  nbEDepGroupKind_InRecipe_ByDepParam.h  nbEDepGroupKind_InRecipe_DepParam.h  nbEDepGroupKind_InRecipe_DepTarget.h  nbEDepGroupKind_InRecipe_SearchCriteriaForDepResolve.h  nbEDependencyGroupKind_InRecipe.cpp  nbEDependencyGroupKind_InRecipe.h  nbFeatureDependency.cpp  nbFeatureDependency.h  nbPropertyDependency.cpp  nbPropertyDependency.h  nbTargetsContainedDependency.cpp  nbTargetsContainedDependency.h
source/nb/data/dependencies/in_recipes/common_funcs/: nbDep_AvailableOn_Funcs.h
source/nb/data/dependencies/in_recipes/feature/: nbFDep_AvailableOnNames.cpp  nbFDep_AvailableOnNames.h
source/nb/data/dependencies/in_recipes/property/: nbPDep_AvailableOnEMacro_s.cpp  nbPDep_AvailableOnEMacro_s.h  nbPDep_AvailableOnNames.cpp  nbPDep_AvailableOnNames.h
source/nb/data/features/: nbFeature.cpp  nbFeature.h
source/nb/data/interface/: nbHasMemberIntefaces.h
source/nb/data/project/: nbProject.h  nbRecipe.h
source/nb/data/props/: nbEPropertyType.h  nbIBoolValProperty.cpp  nbIBoolValProperty.h  nbProperty.cpp  nbProperty.h  nbPropertyGroup.cpp  nbPropertyGroup.h
source/nb/data/props/concrete_types/: nbProperty_BoolFlag.cpp  nbProperty_BoolFlag.h  nbProperty_NumDouble.cpp  nbProperty_NumDouble.h  nbProperty_NumInteger.cpp  nbProperty_NumInteger.h  nbProperty_NumUInteger.cpp  nbProperty_NumUInteger.h  nbProperty_UnicodeString.cpp  nbProperty_UnicodeString.h
source/nb/data/recipe_dependencies/: nbDependencyFactory.cpp  nbDependencyFactory.h  nbFeatureDependency.cpp  nbFeatureDependency.h  nbPropertyDependency.cpp  nbPropertyDependency.h  nbTargetsContainedDependency.h
source/nb/data/recipe_dependencies/common_funcs/: nbDep_AvailableOn_Funcs.cpp  nbDep_AvailableOn_Funcs.h
source/nb/data/recipe_dependencies/feature/: nbFDep_AvailableOnNames.cpp  nbFDep_AvailableOnNames.h
source/nb/data/recipe_dependencies/property/: nbPDep_AvailableOnEMacro_s.cpp  nbPDep_AvailableOnEMacro_s.h  nbPDep_AvailableOnNames.cpp  nbPDep_AvailableOnNames.h
source/nb/logic/: nbOpenedProjectHandler.cpp  nbOpenedProjectHandler.h  nbProjectHandlerIObserver.cpp  nbProjectHandlerIObserver.h  nbProjectWorker.cpp  nbProjectWorker.h
source/nb/logic/dependencies/: nbProjectDependenciesResolver.cpp  nbProjectDependenciesResolver.h  nbRecipeDependenciesResolver.cpp  nbRecipeDependenciesResolver.h  nbTypeAliasesInclude.h
source/nb/logic/dependencies/factories/: nbDependencies_Logic_Funcs.cpp  nbDependencies_Logic_Funcs.h
source/nb/logic/factories/: nbProjectEntitiesLoader.cpp  nbProjectEntitiesLoader.h
source/nb/logic/opened_handlers/: nbOpenedProjectHandler.cpp  nbOpenedProjectHandler.h  nbOpenedRecipeHandler.cpp  nbOpenedRecipeHandler.h
source/nb/logic/request_data/: nbReqProjectLoadingResult.cpp  nbReqProjectLoadingResult.h  nbReqProjectSavingResult.cpp  nbReqProjectSavingResult.h
source/res/: noun_Error_1965707.png.h  noun_Seal_N3E.png.h  noun_build_1178847.png.h
source/wxApplication/: nbFormMainExt.cpp  nbFormMainExt.h  nbStartupAnimExt.cpp  nbStartupAnimExt.h  nbWxApp.cpp  nbWxApp.h  nbWxAppGlobals.cpp  nbWxAppGlobals.h  nbWxAppWorkers.cpp  nbWxAppWorkers.h  nbWxFormElementBlockObject.cpp  nbWxFormElementBlockObject.h  nbWxFormElementsBlockingMechanism.cpp  nbWxFormElementsBlockingMechanism.h  nbWxForms.cpp  nbWxForms.h  nbWxObserverProjectWorker.cpp  nbWxObserverProjectWorker.h  nbWxProjectOpenedInForm.cpp  nbWxProjectOpenedInForm.h  nbWxProjectOpenedSimple.cpp  nbWxProjectOpenedSimple.h
source/wxApplication/events/: EvNbWxFormCustomAction.cpp  EvNbWxFormCustomAction.h  EvProjectLoadDone.cpp  EvProjectLoadDone.h
supported-project-examples/: .nbuilder_support  test.nb_recipe
supported-project-examples/.nbuilder_trecipes/: test.nb_recipe
